--- a/src/pages/ImageSlice/ImageSlice.scss
+++ b/src/pages/ImageSlice/ImageSlice.scss
@@ -1,27 +1,62 @@
+$media-break: 800px;
+
 .image-slice-page {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    overflow: scroll;
+    @media screen and (max-width: $media-break) {
+        flex-direction: column;
+        justify-content: flex-start;
+        .description, .component-property-controls, .styles-area {
+            display: none;
+        }
+
+        .presets {
+            margin: 20px;
+            text-align: center;
+            >button {
+                height: 30px;
+                min-width: 50px;
+                margin-right: 10px;
+            }
+        }
+    }
+
+    .component-area, .styles-area {
+        margin: 5px 10px;
+    }
+
+    .component-property-controls {
+        margin-top: 10px;
+    }
 
     .component-area {
-        margin: 10px;
         display: flex;
         flex-direction: column;
 
-        >.image-container {
-            overflow: hidden;
-            min-height: 200px;
-            >.image {
-                margin: -5px;
+        >.image-flex-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            >.image-border-cut {
+                overflow: hidden;
+                >.image {
+                    margin: -5px;
+                }
             }
         }
     }
 
     .styles-area {
-        margin: 10px;
-        width: 100%;
+        width: 50%;
         height: 100%;
+        >div {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
